cicd_cloud_kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-gitops
  name: hello-gitops
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8050
  selector:
    app: hello-gitops
    color: blue
  type: ClusterIP
